--- a/src/styles/EntryEditor.scss
+++ b/src/styles/EntryEditor.scss
@@ -1,6 +1,34 @@
 .EntryEditor {
   &__window {
-    max-width: 20em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000c;
+    backdrop-filter: blur(5px);
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  #nav-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+    padding: 3em 1em;
+  }
+
+  form {
+    width: 100%;
+    max-width: 30em;
+    background-color: #222;
     padding: 1em;
   }
 
@@ -25,6 +53,44 @@
     ::-webkit-input-placeholder {
       opacity: 1;
       color: #777;
+    }
+  }
+
+  &__asked-to-delete {
+    text-align: center;
+    margin: 1rem auto 0 auto;
+    font-size: .75rem;
+    border: 1px solid #a33;
+    background-color: #200;
+    color: #ccc;
+    padding: .5em;
+    max-width: 24em;
+  }
+
+  &__asked-to-delete-choices {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+  &__asked-to-delete-cancel,
+  &__asked-to-delete-confirm {
+    padding: .3em .5em;
+    color: #fff;
+    cursor: pointer;
+    transition: .2s;
+  }
+
+  &__asked-to-delete-confirm {
+    &:hover {
+      color: #f55;
+    }
+  }
+
+  &__asked-to-delete-cancel {
+    &:hover {
+      color: #4a0;
     }
   }
 }
