--- a/src/styles/EntryEditor.scss
+++ b/src/styles/EntryEditor.scss
@@ -1,4 +1,36 @@
 .EntryEditor {
+  &__add-button {
+    width: 3em;
+    height: 3em;
+    margin: 1em 0 0 auto;
+    padding: .3em;
+    background-color: #eee;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: .2s;
+
+    svg {
+      width: 100%;
+      height: 100%;
+      display: block;
+
+      path {
+        stroke-width: 1.5;
+        stroke: #333;
+        stroke-linecap: round;
+        transition: .2s;
+      }
+    }
+
+    &:hover {
+      background-color: #fff;
+
+      svg path {
+        stroke: #390;
+      }
+    }
+  }
+
   &__window {
     position: fixed;
     top: 0;
@@ -16,7 +48,7 @@
     }
   }
 
-  #nav-wrap {
+  &__wrap {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,27 +64,54 @@
     padding: 1em;
   }
 
-  .input-row {
-    margin-bottom: 5px;
+  &__buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: .5rem;
+    margin-top: .5rem;
 
-    input,
-    .select {
-      width: 100%;
-      font: inherit;
-      background-color: #333;
-      color: #eee;
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: auto;
+      height: 20px;
       border: none;
-
-      &:focus {
-        outline: none;
-      }
-
+      font: inherit;
+      font-weight: 700;
+      background-color: #ddd;
+      color: #111;
+      box-shadow: 0 0 2px #000;
+      font-size: .6rem;
+      padding: 2px 5px;
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      cursor: pointer;
+      transform-origin: 100% 0%;
+      transition: .2s !important;
     }
+  }
 
-    ::placeholder,
-    ::-webkit-input-placeholder {
-      opacity: 1;
-      color: #777;
+  &__delete {
+    &:hover {
+      color: #f55;
+      background-color: #fff;
+    }
+  }
+
+  &__submit {
+    &:hover {
+      color: #390;
+      background-color: #fff;
+    }
+  }
+
+  &__cancel {
+    margin-left: auto;
+
+    &:hover {
+      color: #000;
+      background-color: #fff;
     }
   }
 
