--- a/src/styles/EntryEditor.scss
+++ b/src/styles/EntryEditor.scss
@@ -1,18 +1,38 @@
 .EntryEditor {
+  text-align: right;
+
   &__add-button {
-    width: 3em;
-    height: 3em;
-    margin: 1em 0 0 auto;
-    padding: .3em;
+    width: 2.6rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-weight: 700;
+    font-size: 1em;
+    margin-top: 1rem;
+    padding: .3rem .8rem .3rem .3rem;
     background-color: #eee;
-    border-radius: 50%;
+    color: #333;
+    border-radius: 3rem;
     cursor: pointer;
     transition: .2s;
+    overflow: hidden;
+
+    >* {
+      flex-shrink: 0;
+    }
+
+    span {
+      display: block;
+      text-transform: uppercase;
+      letter-spacing: .1em;
+      margin-top: .1em;
+    }
 
     svg {
-      width: 100%;
-      height: 100%;
+      width: 2rem;
+      height: 2rem;
       display: block;
+      margin-right: .5rem;
 
       path {
         stroke-width: 1.5;
@@ -24,6 +44,8 @@
 
     &:hover {
       background-color: #fff;
+      color: #390;
+      width: 9.2rem;
 
       svg path {
         stroke: #390;
@@ -60,15 +82,17 @@
   form {
     width: 100%;
     max-width: 30em;
-    background-color: #222;
+    background-color: #111;
     padding: 1em;
+    border-radius: 5px;
+    box-shadow: 0 0 0 1px #333;
   }
 
   &__buttons {
     display: flex;
     flex-wrap: wrap;
     gap: .5rem;
-    margin-top: .5rem;
+    margin-top: 1rem;
 
     button {
       display: flex;
@@ -84,6 +108,7 @@
       box-shadow: 0 0 2px #000;
       font-size: .6rem;
       padding: 2px 5px;
+      border-radius: 2px;
       text-transform: uppercase;
       letter-spacing: .1em;
       cursor: pointer;
@@ -100,6 +125,8 @@
   }
 
   &__submit {
+    margin-left: auto;
+
     &:hover {
       color: #390;
       background-color: #fff;
@@ -107,8 +134,6 @@
   }
 
   &__cancel {
-    margin-left: auto;
-
     &:hover {
       color: #000;
       background-color: #fff;
