--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,13 @@
+@import "./variables";
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  background-color: #000;
-  color: #eee;
+  background-color: $colorBg;
+  color: $colorContent;
   font-family: sans-serif;
 }
 
