--- a/src/styles/EntryEditorInputs.scss
+++ b/src/styles/EntryEditorInputs.scss
@@ -85,8 +85,12 @@
       textarea {
         background: none;
         font-size: 1.62em;
+        font-weight: 700;
+        text-align: left;
         padding: 0;
       }
+
+      margin-bottom: 1rem;
     }
 
     &--cover {
