better input handling

--- a/src/styles/EntryEditorInputs.scss
+++ b/src/styles/EntryEditorInputs.scss
@@ -56,6 +56,10 @@
       &__option:active {
         background-color: #333;
       }
+
+      &__multi-value__remove path {
+        fill: #333;
+      }
     }
 
     textarea,
@@ -100,7 +104,9 @@
 
       .input-display {
         display: flex;
+        justify-content: center;
         align-items: center;
+        text-align: center;
         cursor: pointer;
       }
     }
@@ -122,5 +128,11 @@
       width: 50%;
       margin-bottom: 0;
     }
+  }
+
+  hr {
+    border: 0;
+    height: 1px;
+    background-color: $colorContent;
   }
 }
