--- a/src/styles/EntryEditor.scss
+++ b/src/styles/EntryEditor.scss
@@ -2,17 +2,16 @@
   text-align: right;
 
   &__add-button {
-    width: 2.6rem;
     display: inline-flex;
     align-items: center;
     justify-content: flex-start;
     font-weight: 700;
-    font-size: 1em;
+    font-size: .75em;
     margin-top: 1rem;
     padding: .3rem .8rem .3rem .3rem;
     background-color: #eee;
     color: #333;
-    border-radius: 3rem;
+    border-radius: 2px;
     cursor: pointer;
     transition: .2s;
     overflow: hidden;
@@ -29,8 +28,8 @@
     }
 
     svg {
-      width: 2rem;
-      height: 2rem;
+      width: 1rem;
+      height: 1rem;
       display: block;
       margin-right: .5rem;
 
@@ -45,7 +44,6 @@
     &:hover {
       background-color: #fff;
       color: #390;
-      width: 9.2rem;
 
       svg path {
         stroke: #390;
