--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,8 @@ $colorBg1: #3c3836;
 $colorBg2: #504945;
 $colorBg3: #665c54;
 $colorBg4: #7c6f64;
-$colorContent: #ebdbb2;
+$colorContent: #eee;
+$colorContent_: #ebdbb2;
 $colorContent0: #fbf1c7;
 $colorContent1: #d5c4a1;
 $colorContent2: #bdae93;
@@ -13,6 +14,7 @@ $colorRed: #cc241d;
 $colorRed0: #fb4934;
 $colorGreen: #98971a;
 $colorGreen0: #b8bb26;
+$colorGreen1: #8dcc17;
 $colorYellow: #d79921;
 $colorYellow0: #fabd2f;
 $colorBlue: #458588;
