--- a/src/styles/EntryEditor.scss
+++ b/src/styles/EntryEditor.scss
@@ -5,15 +5,9 @@
     display: inline-flex;
     align-items: center;
     justify-content: flex-start;
-    font-weight: 700;
     font-size: .75em;
     margin-top: 1rem;
     padding: .3rem .8rem .3rem .3rem;
-    background-color: #eee;
-    color: #333;
-    border-radius: 2px;
-    cursor: pointer;
-    transition: .2s;
     overflow: hidden;
 
     >* {
@@ -35,18 +29,9 @@
 
       path {
         stroke-width: 1.5;
-        stroke: #333;
+        stroke: $colorGray;
         stroke-linecap: round;
         transition: .2s;
-      }
-    }
-
-    &:hover {
-      background-color: #fff;
-      color: #390;
-
-      svg path {
-        stroke: #390;
       }
     }
   }
@@ -98,43 +83,30 @@
       justify-content: center;
       width: auto;
       height: 20px;
-      border: none;
       font: inherit;
-      font-weight: 700;
-      background-color: #ddd;
-      color: #111;
-      box-shadow: 0 0 2px #000;
       font-size: .6rem;
       padding: 2px 5px;
-      border-radius: 2px;
       text-transform: uppercase;
       letter-spacing: .1em;
-      cursor: pointer;
       transform-origin: 100% 0%;
-      transition: .2s !important;
     }
   }
 
   &__delete {
     &:hover {
-      color: #f55;
-      background-color: #fff;
+      color: $colorRed0;
+      border-color: $colorRed0;
     }
   }
 
   &__submit {
     margin-left: auto;
-
-    &:hover {
-      color: #390;
-      background-color: #fff;
-    }
   }
 
   &__cancel {
     &:hover {
-      color: #000;
-      background-color: #fff;
+      color: $colorGray0;
+      border-color: $colorGray0;
     }
   }
 
@@ -142,7 +114,7 @@
     text-align: center;
     margin: 1rem auto 0 auto;
     font-size: .75rem;
-    border: 1px solid #a33;
+    border: 1px solid $colorRed;
     background-color: #200;
     color: #ccc;
     padding: .5em;
@@ -166,13 +138,13 @@
 
   &__asked-to-delete-confirm {
     &:hover {
-      color: #f55;
+      color: $colorRed0;
     }
   }
 
   &__asked-to-delete-cancel {
     &:hover {
-      color: #4a0;
+      color: $colorGreen1;
     }
   }
 }
