--- a/src/styles/EntryItem.scss
+++ b/src/styles/EntryItem.scss
@@ -1,37 +1,36 @@
 .EntryItem {
   position: relative;
-  display: contents;
+  display: flex;
+  gap: .5rem;
+  min-height: 4rem;
+  background-color: $colorBg0;
 
   &__cover-wrap {
     position: relative;
-    grid-column: 1;
-    width: 100%;
-    padding-bottom: 150%;
-    background-color: $colorBg1;
-    border-radius: 5px;
-    overflow: hidden;
-
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: block;
-      pointer-events: none;
-      box-shadow: 0 0 0 1px #000 inset;
-      border-radius: 5px;
-    }
+    width: 100px;
+    flex-shrink: 0;
 
     .EntryItem__cover {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: calc(100% - 1rem);
+      border-radius: 5px;
       object-fit: cover;
       object-position: center;
+      pointer-events: none;
+      transition: .2s;
+      z-index: 1;
+    }
+
+    &:hover {
+      .EntryItem__cover {
+        position: absolute;
+        width: 200px;
+        height: 300px;
+        z-index: 2;
+      }
     }
 
     .EntryItem__edit {
@@ -43,44 +42,41 @@
       left: 6px;
       width: auto;
       height: 20px;
-      border: none;
       font: inherit;
-      font-weight: 700;
-      background-color: #ddd;
-      color: #111;
-      box-shadow: 0 0 2px #000;
       font-size: .6rem;
       padding: 2px 5px;
       text-transform: uppercase;
       letter-spacing: .1em;
-      cursor: pointer;
       transform-origin: 100% 0%;
       opacity: 0;
-      transition: .2s;
-
-      &:hover {
-        color: #390;
-        background-color: #fff;
-      }
+      z-index: 2;
     }
 
-    &:hover {
-      .EntryItem__edit {
-        opacity: 1;
-      }
+    .EntryItem__type {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      height: .9rem;
+      font-size: .6em;
+      text-transform: uppercase;
+      text-align: center;
+      letter-spacing: .1em;
+      color: $colorContent3;
+      padding: 2px 5px;
+      border-radius: 5px;
     }
   }
 
-  &__seen {
-    font-size: 1.25rem;
-    font-weight: 700;
-    text-align: center;
-    align-self: center;
+  &:hover {
+    .EntryItem__edit {
+      opacity: 1;
+    }
   }
 
   &__name-wrap {
-    grid-column: 2;
-    margin-top: .5rem;
+    width: 100%;
+    flex-shrink: 1;
     align-self: center;
     display: flex;
     flex-direction: column;
@@ -90,20 +86,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-      margin-top: .5rem;
       font-size: .9em;
       font-weight: 700;
-    }
-
-    .EntryItem__type {
-      font-size: .6em;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .1em;
-      background-color: #ddd;
-      color: #111;
-      padding: 2px 5px;
-      border-radius: 5px;
     }
   }
 }
