--- a/src/styles/EntryList.scss
+++ b/src/styles/EntryList.scss
@@ -1,12 +1,11 @@
 .EntryList {
   max-width: 80rem;
   margin: 0 auto;
-  padding: 3em 1em;
+  padding: 5em 1em;
 
   &__table {
-    display: grid;
-    grid-template-columns: 100px 1fr 60px 60px;
-    align-items: start;
+    display: flex;
+    flex-direction: column;
     gap: .5rem;
   }
 }
