--- a/src/styles/EntryList.scss
+++ b/src/styles/EntryList.scss
@@ -1,7 +1,9 @@
 .EntryList {
   max-width: 80rem;
   margin: 0 auto;
-  padding: 5em 1em;
+  padding: 1rem 1rem 1rem 14rem;
+  background-color: $colorBg1;
+  margin-top: 5rem;
 
   &__table {
     display: flex;
