--- a/src/styles/EntryItem.scss
+++ b/src/styles/EntryItem.scss
@@ -15,22 +15,13 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: calc(100% - 1rem);
+      height: 100%;
       border-radius: 5px;
       object-fit: cover;
       object-position: center;
       pointer-events: none;
       transition: .2s;
       z-index: 1;
-    }
-
-    &:hover {
-      .EntryItem__cover {
-        position: absolute;
-        width: 200px;
-        height: 300px;
-        z-index: 2;
-      }
     }
 
     .EntryItem__edit {
@@ -51,26 +42,34 @@
       opacity: 0;
       z-index: 2;
     }
+  }
 
-    .EntryItem__type {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      height: .9rem;
-      font-size: .6em;
-      text-transform: uppercase;
-      text-align: center;
-      letter-spacing: .1em;
-      color: $colorContent3;
-      padding: 2px 5px;
-      border-radius: 5px;
-    }
+  .EntryItem__type {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: .9rem;
+    font-size: .6em;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .1em;
+    color: $colorContent3;
+    padding: 2px 5px;
+    border-radius: 5px;
   }
 
   &:hover {
     .EntryItem__edit {
       opacity: 1;
+    }
+
+    .EntryItem__cover {
+      position: absolute;
+      left: -13.5rem;
+      width: 13rem;
+      height: 300px;
+      z-index: 2;
     }
   }
 
